--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ lineSort/raw.txt
 webLink.html
 dataPiler/data.sqlite
 dataPiler/__pycache__/*
+plantNameSummary/data.sqlite
+plantNameSummary/__pycache__
+plantNameSummary/resultList.csv
