plantNameSummary 상대기여도 계산 기능 추가

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 lineSort/sort.txt
 lineSort/raw.txt
 webLink.html
-plantNameSummary/resultList.csv
+plantNameSummary/resultList*
 plantNameSummary/CSVs
 *zNex~*
 plantNameSummary/inputList.csv
