pairedTtest 대응표본 t검정 프로그램 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ lineSort/raw.txt
 webLink.html
 plantNameSummary/resultList*
 plantNameSummary/CSVs
-*zNex~*
-plantNameSummary/inputList.csv
+*zNex~*
+*inputList.csv
 *.~lock.*
+*cmdOutput*
